fixed too large spacing with .top

--- a/src/App.css
+++ b/src/App.css
@@ -617,7 +617,7 @@ h3 {
 
 .top {
   width: 80%;
-  margin: 1% 10% 10% 10%;
+  margin: 5% 10% 5% 10%;
 }
 
 .top h2 {
